changed UIs. To Do: program camera and clarifai and fragments

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compile "com.clarifai.clarifai-api2:core:2.2.12"
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.firebaseui:firebase-ui-database:2.2.0'
+    //compile 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
 
     // For logging our HTTP outbound + inbound data
     compile "com.jakewharton.timber:timber:4.3.0"
@@ -46,6 +48,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+
 }
 
 
@@ -66,3 +70,9 @@ dependencies {
 
 
 apply plugin: 'com.google.gms.google-services'
+
+dependencies {
+    def appCenterSdkVersion = '1.5.0'
+    compile "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+    compile "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
+}
