--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.android.string"
         minSdkVersion 22
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     lintOptions { lintConfig rootProject.file('gradle/lint.xml') }
     // needed to suppress Okio's lint errors
@@ -22,29 +23,29 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-storage:11.0.4'
-    implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation 'com.google.firebase:firebase-storage:11.0.2'
+    implementation 'com.google.firebase:firebase-database:11.0.2'
 //    implementation 'com.firebaseui:firebase-ui-auth:3.3.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.google.android.gms:play-services-vision:11.0.4'
-    implementation 'com.google.firebase:firebase-auth:11.0.4'
+    implementation 'com.google.android.gms:play-services-vision:11.0.2'
+    implementation 'com.google.firebase:firebase-auth:11.0.2'
 
     compile "com.clarifai.clarifai-api2:core:2.2.12"
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.firebaseui:firebase-ui-database:2.2.0'
-    //compile 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
+    implementation 'com.firebaseui:firebase-ui-database:2.1.1'
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
 
     // For logging our HTTP outbound + inbound data
     compile "com.jakewharton.timber:timber:4.3.0"
     compile "com.squareup.okhttp3:logging-interceptor:3.4.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -71,6 +72,9 @@ dependencies {
 
 apply plugin: 'com.google.gms.google-services'
 
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
 dependencies {
     def appCenterSdkVersion = '1.5.0'
     compile "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
